Refactoring Dapper repositories and ProductController added

--- a/src/ShoppingCart.Api/appsettings.json
+++ b/src/ShoppingCart.Api/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "SqlConnection": "Server=.\\SQLEXPRESS;Database=ShoppingCart;Integrated Security=True;TrustServerCertificate=true;"
+    "SqlConnection": "Server=.\\SQLEXPRESS;Database=ShoppingCartProd;Integrated Security=True;TrustServerCertificate=true;"
   },
   "Serilog": {
     "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File", "Serilog.Sinks.MSSqlServer" ],
@@ -19,16 +19,6 @@
         "Name": "Console",
         "Args": {
           "theme": "Serilog.Sinks.SystemConsole.Themes.AnsiConsoleTheme::Code, Serilog.Sinks.Console",
-          "outputTheme": "[{Timestamp:HH:mm:ss} {Level:u3}] {Message:lj} <s:{SourceContext}>{NewLine}{Exception}"
-        }
-      },
-      {
-        "Name": "File",
-        "Args": {
-          "path": "./Logs/logs.json",
-          "formatter": "Serilog.Formatting.Compact.CompactJsonFormatter, Serilog.Formatting.Compact",
-          "rollingInterval": "Day",
-          "retainedFileCountLimit": 7,
           "outputTheme": "[{Timestamp:HH:mm:ss} {Level:u3}] {Message:lj} <s:{SourceContext}>{NewLine}{Exception}"
         }
       },
