--- a/src/ShoppingCart.Abstractions/ShoppingCart.Abstractions.csproj
+++ b/src/ShoppingCart.Abstractions/ShoppingCart.Abstractions.csproj
@@ -7,11 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Models\Dtos\" />
     <Folder Include="Services\" />
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
     <PackageReference Include="Dapper" Version="2.1.28" />
     <PackageReference Include="Dapper.FluentMap" Version="2.0.0" />
     <PackageReference Include="Serilog.AspNetCore" Version="8.0.1" />
