Added email service in hangfire job to send email with list of users

--- a/src/ShoppingCart.Api/appsettings.Development.json
+++ b/src/ShoppingCart.Api/appsettings.Development.json
@@ -52,5 +52,14 @@
     ],
     "Enrich": [ "FromLogContext" ]
   },
+  "EmailOptions": {
+    "Host": "",
+    "Port": 0,
+    "EnableSsl": true,
+    "Credentials": {
+      "Email": "",
+      "Password": ""
+    }
+  },
   "AllowedHosts": "*"
 }
