--- a/src/ShoppingCart.Api/appsettings.json
+++ b/src/ShoppingCart.Api/appsettings.json
@@ -42,5 +42,14 @@
     ],
     "Enrich": [ "FromLogContext" ]
   },
+  "EmailOptions": {
+    "Host": "",
+    "Port": 0,
+    "EnableSsl": false,
+    "Credentials": {
+      "Email": "",
+      "Password": ""
+    }
+  },
   "AllowedHosts": "*"
 }
