--- a/src/ShoppingCart.Abstractions/ShoppingCart.Abstractions.csproj
+++ b/src/ShoppingCart.Abstractions/ShoppingCart.Abstractions.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="Dapper" Version="2.1.28" />
     <PackageReference Include="Dapper.FluentMap" Version="2.0.0" />
     <PackageReference Include="Hangfire.AspNetCore" Version="1.8.7" />
+    <PackageReference Include="Hangfire.RecurringJobAdmin" Version="1.0.5" />
     <PackageReference Include="Hangfire.SqlServer" Version="1.8.7" />
     <PackageReference Include="Serilog.AspNetCore" Version="8.0.1" />
     <PackageReference Include="Serilog.Sinks.MSSqlServer" Version="6.5.0" />
