Added appsettings.local.json configuration

--- a/src/ShoppingCart.Api/ShoppingCart.Api.csproj
+++ b/src/ShoppingCart.Api/ShoppingCart.Api.csproj
@@ -19,4 +19,9 @@
     <Folder Include="Logs\" />
   </ItemGroup>
 
+	<!-- Exclude local appsettings -->
+	<ItemGroup>
+		<Content Update="appsettings.local.json" CopyToPublishDirectory="Never"></Content>
+	</ItemGroup>
+
 </Project>
