--- a/src/ShoppingCart.Api/appsettings.Development.json
+++ b/src/ShoppingCart.Api/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "SqlConnection": "Server=.\\SQLEXPRESS;Database=ShoppingCart;Integrated Security=True;TrustServerCertificate=true;"
+    "SqlConnection": ""
   },
   "Serilog": {
     "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File", "Serilog.Sinks.MSSqlServer" ],
@@ -55,7 +55,7 @@
   "EmailOptions": {
     "Host": "",
     "Port": 0,
-    "EnableSsl": true,
+    "EnableSsl": false,
     "Credentials": {
       "Email": "",
       "Password": ""
