--- a/src/ShoppingCart.Api/appsettings.json
+++ b/src/ShoppingCart.Api/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "SqlConnection": "Server=.\\SQLEXPRESS;Database=ShoppingCartProd;Integrated Security=True;TrustServerCertificate=true;"
+    "SqlConnection": ""
   },
   "Serilog": {
     "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File", "Serilog.Sinks.MSSqlServer" ],
